--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
   </div>
 </div>
 
-  <script src="data.js"></script>
-  <script src="app.js"></script>
+  <script src="data.js" defer></script>
+  <script src="app.js" defer></script>
 </body>
 </html>
