--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
       <div class="brp-footer-credits">
         <p>Desenvolvido por <strong>ADM Nathan</strong></p>
-        <p class="brp-footer-copyright">© 2025 BRP — Todos os direitos reservados.</p>
+        <p class="brp-footer-copyright">© 2025 BRP - Todos os direitos reservados.</p>
       </div>
     </div>
   </footer>
